src/test/ui/inline-const/const-expr-lifetime-err.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/const-expr-lifetime-err.rs:23:30
   |
LL | fn foo<'a>() {
   |        -- lifetime `'a` defined here
LL |     let y = ();
LL |     equate(InvariantRef::new(&y), const { InvariantRef::<'a>::NEW });
   |                              ^^           ----------------------- type annotation requires that `y` is borrowed for `'a`
   |                              |
   |                              borrowed value does not live long enough
LL |
LL | }
   | - `y` dropped here while still borrowed
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/const-expr-lifetime-err.rs:23:43
   |
LL |     equate(InvariantRef::new(&y), const { InvariantRef::<'a>::NEW });
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
